@@ -18,6 +18,7 @@
  
 TreeTank 4.18
 -------------
+11 Added var arg to FilterAxis to allow for multiple filters.
 10 Fixed bug with cursor moving to attributes.
  9 SAXHandler now able to insert subtrees into an existing treetank.
  8 SAXGenerator now only accepting IReadTransaction. It will allways perform
